# minecraft_bot_manager

./: LICENSE.txt  README.md  flake.nix
.github/workflows/: linux-release.yml  mod.yml  snapshot-release.yml  windows-release.yml
application-c++/: CMakeLists.txt
application-rust/: Cargo.toml  build.rs
application-rust/src/: action.rs  main.rs
application-rust/src/screen/: configure.rs  mod.rs  table.rs
crates/prismlauncher/: Cargo.toml
crates/prismlauncher/src/: lib.rs  tests.rs
mod/: .gitignore
proto/: baritone.proto  meteor.proto
